test/arrays/deitz/part6/test_bounds2.good
0
test_bounds2.chpl:4: error: halt reached - indexing out of bounds in dimension 2: [6] but array bounds are 1..5
